Fix images on home page for Safari by eliminating white space in HTML

--- a/style.css
+++ b/style.css
@@ -172,18 +172,23 @@ header {
 .image-tiles {
 	display: flex;
 	flex-flow: row wrap;
+	/* display: -webkit-box;
+  display: -ms-flexbox;
+	-ms-flex-wrap: wrap; */
 }
 
 .image-tiles img {
 	width: 25%;
-	/* height: auto; */
+	max-height: 25%;
 	/* vertical-align: bottom; */
 	flex: 1;
+	/* -webkit-box-flex: 1;
+  -ms-flex: 1; */
 }
 
 #big-image {
 	width: 50%;
-	/* height: auto; */
+	max-height: 50%;
 }
 
 #four-squares {
@@ -191,11 +196,12 @@ header {
 	flex-flow: row wrap;
 	/* vertical-align: bottom; */
 	width: 50%;
+	max-height: 50%;
 }
 
 #four-squares img {
 	width: 50%;
-	/* height: auto; */
+	max-height: 50%;
 }
 
 /* Footer Section */
